update users route and docs
